tests/paczka1/fuzzy1/90306239.err
Error in line 8: 7nN3vBwVW A206 99,5
Error in line 2: RT9G3yd6R S635 72,8
Error in line 17: RT9G3yd6R A206 22,4
